// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover component should match snapshots 1`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 2`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 3`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-success___iSgM8 {
  --qtm-colors-success-500: hsla(89,68%,78%,.5);
  color: var(--qtm-colors-success-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #dcedc8;
  color: #004D40;
}

.c1:before {
  color: #dcedc8;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #004D40;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #004D40;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-success___iSgM8 c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 4`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-warning___hXpt0 {
  --qtm-colors-warning-500: rgba(255,218,106,.5);
  color: var(--qtm-colors-warning-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffefd6;
  color: #424242;
}

.c1:before {
  color: #ffefd6;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-warning___hXpt0 c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 5`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-error___Z1b-H {
  --qtm-colors-error-500: hsla(4,89%,75%,.5);
  color: var(--qtm-colors-error-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #fff5f5;
  color: #424242;
}

.c1:before {
  color: #fff5f5;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-error___Z1b-H c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 6`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  bottom: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,100%);
  -ms-transform: translate(-50%,100%);
  transform: translate(-50%,100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  top: -4px;
  content: '▲';
  left: 50%;
  text-shadow: 0px -3px 4px rgba(66,66,66,0.2);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 7`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: 50%;
  left: -15px;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  bottom: 50%;
  content: '▶';
  right: -8px;
  text-shadow: 4px 1px 4px rgba(66,66,66,0.2);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 8`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: 50%;
  right: -15px;
  -webkit-transform: translate(100%,-50%);
  -ms-transform: translate(100%,-50%);
  transform: translate(100%,-50%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  bottom: 50%;
  content: '◀';
  left: -8px;
  text-shadow: -4px 1px 4px rgba(66,66,66,0.2);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 9`] = `
<DocumentFragment>
  .ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #424242;
  color: #ffffff;
}

.c1:before {
  color: #424242;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #ffffff;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #ffffff;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;
